--- a/buy-files/finland.html
+++ b/buy-files/finland.html
@@ -81,6 +81,56 @@
                     </div>
                 </div>
             </div>
+            <div class="preoperty-helsinki-house">
+                <div class="estate-photo">
+                    <img src="../photos/webaliser-_TPTXZd9mOo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$25.550.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="preoperty-helsinki-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$65.550.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="preoperty-helsinki-last">
+                <div class="estate-photo">
+                    <img src="../photos/w991x660.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$65.950.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+            </div>
         </div>
 
         <div class="estate-turku wrap">
