fixed the index properties, need to add names and value

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -40,107 +40,149 @@
     <main class="page-body">
 
         <!--Top Picture-->
-        <div class="top-pic">
-            <img src="/photos/houseonahand.jpeg" alt="">
-            <div class="top-pic-content">
-
-                <div class="top-pic-text">
-                    <h2>with us you can sell, buy and rent your</h2>
-                    <h1>FUTURE HOME</h1>
-                </div>
-                
-                <div class="top-pic-filters">
-                    <div class="filters">
-                        <div class="filter">
-                            <i class="fa-solid fa-location-dot" id="location-icon"></i>
-                            <div class="filter-text">
-                                <p>Location</p>
-                                <span>Search Location</span>
-                            </div>
-                        </div>
-                        <div class="filter">
-                            <i class="fa-solid fa-house-chimney"></i>
-                            <div class="filter-text">
-                                <p>Select Type</p>
-                                <span>Filter Type</span>
-                            </div>
-                        </div>
-                        <div class="filter">
-                            <i class="fa-solid fa-sack-dollar"></i>
-                            <div class="filter-text">
-                                <p>Budget</p>
-                                <span>Filter Budget</span>
-                            </div>
-                        </div>
+        <section class="top-picture">
+            <div class="top-picture-background">
+                <div class="picture-content">
+                    <div class="title-top-picture">
+                        <h3>with us you can buy, rent, sell and build your</h3>
+                        <h2>FUTURE HOME</h2>
                     </div>
-                    <div class="filter-results">
-                        <a href="properties-all.html">
-                            <p>See Results</p>
-                        </a>
+                    <div class="filters-top-picture">
+                        <div class="location-top-picture">
+                            <i class="fa-solid fa-location-dot" id="location-icon"></i>
+                            <div class="under-filter">
+                                <p>Location</p>
+                                <span class="span-top-picture">Filter Location</span>
+                            </div>
+                        </div>
+                        <div class="type-top-picture">
+                            <i class="fa-solid fa-house-chimney"></i>
+                            <div class="under-filter">
+                                <p>Select Type</p>
+                                <span class="span-top-picture">Filter Type</span>
+                            </div>
+                        </div>
+                        <div class="budget-top-picture" id="last-filter">
+                            <i class="fa-solid fa-sack-dollar"></i>
+                            <div class="under-filter">
+                                <p>Budget</p>
+                                <span class="span-top-picture">Filter Budget</span>
+                            </div>
+                        </div>
+                        <div class="result-top-picture">
+                            <a href="/html-files/properties-all.html">SEE RESULTS</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!--Properties-->
-        <div class="content1-properties">
-            <h2>Our Newest Properties on the Market</h2>
-            <div class="properties">
-                <div class="property">
-                    <a href="property-detail.html">
-                        <img src="/photos/house1.jpeg" alt="">
-                        <div class="property-text">
-                            <p>Riverdale</p>
-                            <span>290 000$</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="property">
-                    <a href="property-detail.html">
-                        <img src="/photos/house2.jpeg" alt="">
-                        <div class="property-text">
-                            <p>Radahns Mansion</p>
-                            <span>875 000$</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="property">
-                    <a href="property-detail.html">
-                        <img src="/photos/house3.jpeg" alt="">
-                        <div class="property-text">
-                            <p>Melenias Valley</p>
-                            <span>560 000$</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="property">
-                    <a href="property-detail.html">
-                        <img src="/photos/house4.jpeg" alt="">
-                        <div class="property-text">
-                            <p>Midtun 3B</p>
-                            <span>190 000$</span>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="property-continue">
-                    <a  href="properties-all.html">
-                        <div id="last-property-all">
-                            <div class="property-next-button">
-                                <i class="fa-solid fa-arrow-right"></i>
-                            </div>
-                            <div id="last-property-bottom">
-                                <img src="/photos/house5.jpeg" alt="">
-                                <div class="property-text">
-                                    <p>Salhusvegen 21C</p>
-                                    <span>220 000$</span>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+        <section class="properties-on-market">
+            <div class="properties-title">
+                <h2>Newest Properties on Market</h2>
+                <span>Updated Today</span>
             </div>
-        </div>
+            <div class="properties">
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>House</p>
+                            </div>
+                            <img src="/photos/ecohouse1.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>Apartment</p>
+                            </div>
+                            <img src="/photos/ap1.webp" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>House</p>
+                            </div>
+                            <img src="/photos/ecohouse3.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>Apartment</p>
+                            </div>
+                            <img src="/photos/ap11.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>House</p>
+                            </div>
+                            <img src="/photos/ecohouse2.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property">
+                        <a href="/html-files/property-detail.html">
+                            <div class="property-type">
+                                <p>Apartment</p>
+                            </div>
+                            <img src="/photos/ap9.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <a href="/html-files/properties-all.html" class="see-more-button">
+                        <div class="grey-cloud">
+                            <div class="property" id="last-property">
+                                <div class="see-more">
+                                    <p>SEE MORE</p>
+                                </div>
+                                    <div class="property-type" id="property-type-last">
+                                        <p>House</p>
+                                    </div>
+                                    <img src="/photos/ecohouse5.jpg" alt="">
+                                    <div class="property-info">
+                                        <h4>Property Name</h4>
+                                        <h5>Price</h5>
+                                    </div>
+                            </div>
+                        </div>
+                    </a>
+
+            </div>
+        </section>
 
         <!--LEARN MORE Content-->
         <div class="content2-eco">
@@ -202,25 +244,29 @@
         </div>
 
         <!--NEWSLETTER-->
-        <div class="newsletter">
-            <div class="newsletter-content">
-                <div class="newsletter-text">
-                    <h3>Don’t miss out on our Newsletter!</h3>
-                    <p>Get notifications whenever a potential Dream Home comes on Market</p>
+       
+        <div class="bottom-content">
+            <div class="newsletter">
+                <div class="background-newsletter">
+                    <img src="/photos/squiggly2-dark.png" alt="">
                 </div>
-                <div class="nexsletter-emailbox">
-                    <div class="enter-email">
-                        <input type="text" name="" id="" placeholder="Enter your e-mail...">
+                <div class="content-newsletter">
+                    <div class="textbox-newsletter">
+                        <h3>Don't miss out on our Newsletter!</h3>
+                        <p>Get notifications whenever a potential Dream Home comes on Market</p>
                     </div>
-                    <div class="submit-button">
-                        <p>SUBMIT</p>
+                    <div class="submit-email-newsletter">
+                        <div class="insert-email-newsletter">
+                            <input type="text" placeholder="enter your e-mail adress here...">
+                        </div>
+                        <div class="submit-button-newsletter">
+                            <p>SUBMIT</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="logo-background">
-                <img src="/media/example_2.png" alt="">
             </div>
         </div>
+
 
     </main>
 
