content info index page udpate

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -185,63 +185,55 @@
         </section>
 
         <!--LEARN MORE Content-->
-        <div class="content2-eco">
-            <div class="eco-friendly-content">
-                <div class="eco-friendly-left">
-                    <div class="eco-friendly-textbox">
+        <section class="info-content">
+
+            <div class="info-content-eco">
+                <div class="info-box">
+                    <div class="info-textbox">
                         <h3>Discover ECO-friendly houses of the future which won’t cost you your both livers</h3>
-                        <p>we are partnering with Tesla, to give you a better and cheaper option of living, which is also environment friendly</p>
+                        <h4>we are partnering with Tesla, to give you a better and cheaper option of living, which are also environment friendly</h4>
+                        <div class="info-learnmore-button">
+                            <a href="">LEARN MORE</a>
+                        </div>
                     </div>
-                    <div class="learn-more-button">
-                        <a href="about.html">
-                            <p>LEARN MORE</p>
-                        </a>
+                    <div class="info-picture">
+                        <img src="/Pictures/info/solarpanels.webp" alt="">
                     </div>
-                </div>
-                <div class="eco-friendly-image">
-                    <img src="/photos/solarpanels.webp" alt="">
                 </div>
             </div>
-        </div>
 
-        <div class="content2-selling">
-            <div class="selling-content">
-                <div class="selling-image">
-                    <img src="/photos/soldhousecoupleonfront.jpg" alt="">
-                </div>
-                <div class="selling-right">
-                    <div class="selling-textbox">
+            <div class="info-content-selling">
+                <div class="info-box">
+                    <div class="info-picture">
+                        <img src="/Pictures/info/selling.jpg" alt="">
+                    </div>
+                    <div class="info-textbox" id="info-textbox2">
                         <h3>Considering Selling?</h3>
-                        <p>Do you want to sell or are you considering selling your house/apartment?
-                            We make sure you hit the market place and sell for the correct estimated value of your property possible, for as low as 2% fee of your brutto price we sell your property for!</p>
-                    </div>
-                    <div class="learn-more-button" id="selling-content-button">
-                        <a href="about.html">
-                            <p>LEARN MORE</p>
-                        </a>
+                        <h4>Do you want to sell or are you considering selling your house/apartment?</h4>
+                        <h4>We make sure you hit the market place and sell for the correct estimated value of your property possible, for as low as 2% fee of your brutto price we sell your property for!</h4>
+                        <div class="info-learnmore-button">
+                            <a href="" id="learn-more-button2">LEARN MORE</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="content2-buying">
-            <div class="buying-content">
-                <div class="buying-left">
-                    <div class="buying-textbox">
-                        <h3>Find your dream home with us</h3>
-                        <p>We make sure all the partners in the process of both buying and selling, have a positive experience. As a buyer, we make sure you get what you pay for and more, learn what rights you have as a buyer and see what we can help you with.</p>
+            <div class="info-content-buying">
+                <div class="info-box">
+                    <div class="info-textbox">
+                        <h3>Discover ECO-friendly houses of the future which won’t cost you your both livers</h3>
+                        <h4>we are partnering with Tesla, to give you a better and cheaper option of living, which are also environment friendly</h4>
+                        <div class="info-learnmore-button">
+                            <a href="">LEARN MORE</a>
+                        </div>
                     </div>
-                    <div class="learn-more-button">
-                        <a href="about.html">
-                            <p>LEARN MORE</p>
-                        </a>
+                    <div class="info-picture">
+                        <img src="/Pictures/info/buying.jpg" alt="">
                     </div>
-                </div>
-                <div class="buying-image">
-                    <img src="/photos/familyfrontofhomemodern.jpg" alt="">
                 </div>
             </div>
-        </div>
+
+        </section>
 
         <!--NEWSLETTER-->
        
