fixed index css

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="info-picture">
-                        <img src="/Pictures/info/solarpanels.webp" alt="">
+                        <img src="/photos/solarpanels.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -205,7 +205,7 @@
             <div class="info-content-selling">
                 <div class="info-box">
                     <div class="info-picture">
-                        <img src="/Pictures/info/selling.jpg" alt="">
+                        <img src="/photos/selling.jpg" alt="">
                     </div>
                     <div class="info-textbox" id="info-textbox2">
                         <h3>Considering Selling?</h3>
@@ -228,15 +228,103 @@
                         </div>
                     </div>
                     <div class="info-picture">
-                        <img src="/Pictures/info/buying.jpg" alt="">
+                        <img src="/photos/buying.jpg" alt="">
                     </div>
                 </div>
             </div>
 
         </section>
 
+        
+        <!--Rentals-->
+        <section class="rentals-on-market">
+
+            <div class="properties-title">
+                <h2>Newest Rentals on Market</h2>
+                <span>Updated Today</span>
+            </div>
+            <div class="properties" id="rentals">
+
+                    <div class="property" id="rental">
+                        <a href="house-detail.html">
+                            <img src="/photos/ap1.webp" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property" id="rental">
+                        <a href="rent-detail.html">
+                            <img src="/photos/ap10.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property" id="rental">
+                        <a href="house-detail.html">
+                            <img src="/photos/ap11.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property" id="rental">
+                        <a href="rent-detail.html">
+                            <img src="/photos/ap12.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property" id="rental">
+                        <a href="house-detail.html">
+                            <img src="/photos/ap13.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="property" id="rental">
+                        <a href="rent-detail.html">
+                            <img src="/photos/ap15.jpg" alt="">
+                            <div class="property-info">
+                                <h4>Property Name</h4>
+                                <h5>Price</h5>
+                            </div>
+                        </a>
+                    </div>
+
+                    <a href="all-properties.html" class="see-more-button">
+                        <div class="grey-cloud">
+                            <div class="property" id="last-rental">
+                                <div class="see-more">
+                                    <p>SEE MORE</p>
+                                </div>
+                                    <img src="/photos/ap14.webp" alt="">
+                                    <div class="property-info">
+                                        <h4>Property Name</h4>
+                                        <h5>Price</h5>
+                                    </div>
+                            </div>
+                        </div>
+                    </a>
+
+            </div>
+        </section>
+
+
         <!--NEWSLETTER-->
-       
         <div class="bottom-content">
             <div class="newsletter">
                 <div class="background-newsletter">
