--- a/buy-files/finland.html
+++ b/buy-files/finland.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="proerty-turky">
+            <div class="proerty-turku">
                 <div class="estate-photo">
                     <img src="../photos/house-eight.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
@@ -169,6 +169,9 @@
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
+            </div>
+            <div class="property-turku-house">
+
             </div>
         </div>
 
