made a meet our team on the index page

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -323,6 +323,126 @@
             </div>
         </section>
 
+        <!--Real Estate Agents-->
+        <section class="meet-the-team">
+            <h3>Meet Our Team!</h3>
+            <p>All of our Real Estate Agents have undergone years of training and experience to help you both; find and sell your home.</p>
+            <div class="team-mates">
+
+                <a href="/html-files/staff.html" class="agent">
+                    <div class="agent-profile-picture">
+                        <img src="/photos/agents/agent1.jpg" alt="">
+                    </div>
+                    <div class="agent-textbox">
+                        <h4>Full Name</h4>
+                        <p>Years of Experience</p>
+                        <p>Expertiese</p>
+                        <p>Location</p>
+                        <div class="contact-info-agent">
+                            <div class="agent-phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>1234 - 567 - 89</p>
+                            </div>
+                            <div class="agent-email">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>realagent@email.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/html-files/staff.html" class="agent">
+                    <div class="agent-profile-picture">
+                        <img src="/photos/agents/agent2.avif" alt="">
+                    </div>
+                    <div class="agent-textbox">
+                        <h4>Full Name</h4>
+                        <p>Years of Experience</p>
+                        <p>Expertiese</p>
+                        <p>Location</p>
+                        <div class="contact-info-agent">
+                            <div class="agent-phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>1234 - 567 - 89</p>
+                            </div>
+                            <div class="agent-email">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>realagent@email.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/html-files/staff.html" class="agent">
+                    <div class="agent-profile-picture">
+                        <img src="/photos/agents/agent3.webp" alt="" id="agent-off-center">
+                    </div>
+                    <div class="agent-textbox">
+                        <h4>Full Name</h4>
+                        <p>Years of Experience</p>
+                        <p>Expertiese</p>
+                        <p>Location</p>
+                        <div class="contact-info-agent">
+                            <div class="agent-phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>1234 - 567 - 89</p>
+                            </div>
+                            <div class="agent-email">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>realagent@email.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/html-files/staff.html" class="agent">
+                    <div class="agent-profile-picture">
+                        <img src="/photos/agents/agent4.jpg" alt="">
+                    </div>
+                    <div class="agent-textbox">
+                        <h4>Full Name</h4>
+                        <p>Years of Experience</p>
+                        <p>Expertiese</p>
+                        <p>Location</p>
+                        <div class="contact-info-agent">
+                            <div class="agent-phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>1234 - 567 - 89</p>
+                            </div>
+                            <div class="agent-email">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>realagent@email.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="/html-files/staff.html" class="agent">
+                    <div class="agent-profile-picture">
+                        <img src="/photos/agents/agent5.avif" alt="">
+                    </div>
+                    <div class="agent-textbox">
+                        <h4>Full Name</h4>
+                        <p>Years of Experience</p>
+                        <p>Expertiese</p>
+                        <p>Location</p>
+                        <div class="contact-info-agent">
+                            <div class="agent-phone">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>1234 - 567 - 89</p>
+                            </div>
+                            <div class="agent-email">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>realagent@email.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+            <p class="under-text-team">If one of our Agents caught your eye, don't be shy and contact them through clicking on their profile! <br> If none interested, you can find more Agents by scrolling to the end or clicking <a href="">here</a>, or you can fill out a contact form and be asigned a Agent best suited for your needs.</p>
+        </section>
+
 
         <!--NEWSLETTER-->
         <div class="bottom-content">
@@ -346,7 +466,6 @@
                 </div>
             </div>
         </div>
-
 
     </main>
 
