--- a/buy-files/finland.html
+++ b/buy-files/finland.html
@@ -214,7 +214,7 @@
                         <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
                     </div>
                     <div class="estate-price">
-                        <p><b>$39.999.000</b></p>
+                        <p><b>$44.999.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
@@ -225,6 +225,23 @@
 
         <div class="estate-tampere wrap">
             <h2>Tampere Properties</h2>
+            <div class="property-tampere">
+                <div class="estate-photo">
+                    <img src="../photos/house-house.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$64.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-porvoo wrap">
